# DroneControl

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FLIGHT_OPERATION.md  INSTALL.md  PID_WIND_EXPERIMENT.md  QUICK_START.md  README_MAIN.md  USER_GUIDE.md  test_system.py
config/: no_wind_pid_test.json  wind_pid_test.json
install/: local_setup.sh  setup.sh
install/drone_control/lib/drone_control/: drone_state_monitor  gazebo_sim_interface  gazebo_trajectory_visualizer  px4_offboard  talker  trajectory_experiment
install/drone_control/share/drone_control/: package.dsv  package.ps1  package.sh  package.xml
install/drone_control/share/drone_control/config/: px4_config.yaml
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
results/no_wind_20260526_000405/: no_wind_20260526_000405_config.json  no_wind_20260526_000405_trajectory.csv
results/no_wind_20260526_002625/: no_wind_20260526_002625_pid.json
results/wind_20260526_000716/: wind_20260526_000716_config.json
scripts/: run_no_wind_pid_test.sh  run_pid_trajectory_test.py  run_wind_pid_test.sh
src/drone_control/: README.md  package.xml  setup.py
src/drone_control/config/: px4_config.yaml
src/drone_control/drone_control/: drone_state_monitor.py  gazebo_sim_interface.py  gazebo_trajectory_visualizer.py  px4_offboard.py  talker.py  trajectory_experiment.py
src/drone_control/launch/: px4_gazebo.launch.xml  px4_gazebo.py
src/drone_control/worlds/: empty_world.world  windy_world.world
(+3169 files in other folders)
